# afwf_fts_anything-project

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CLAUDE.md  LICENSE.txt  MANIFEST.in  Makefile  README.rst  about-this-workflow.txt  alfred-readme.txt  build.sh  codecov.yml  fixcode.py  info.plist  main.py  mise.toml  pyproject.toml  release-history.rst  requirements-alfred-workflow.txt  requirements-automation.txt  requirements-dev.txt  requirements-doc.txt  requirements-main.txt  requirements-test.txt  requirements.txt  setup.py  tox.ini
.claude/: settings.json
.claude/skills/afwf/: SKILL.md
.claude/skills/py-changelog/: SKILL.md
.claude/skills/sayt2/: SKILL.md
.claude/write-agent-skill/: SKILL.md
.claude/write-agent-skill/references/: extend-claude-with-skills.md
.github/workflows/: main.yml  master.yml
.mise/tasks/: list-tasks-markdown.py  notebook-to-markdown.py  publish.py  release.py  setup-codecov.py  setup-readthedocs.py  update-github-metadata.py  utils.py
afwf_fts_anything/: __init__.py  _version.py  api.py  cache.py  cli.py  compat.py  constant.py  data_catalog.py  dataset.py  exc.py  fts.py  fts_setting.py  fuzzymatch.py  handlers.py  helpers.py  json_comment.py  paths.py  record.py  setting.py  settings.py  workflow.py  workflow_item.py
afwf_fts_anything/docs/: __init__.py
afwf_fts_anything/handlers/: error.py  fts.py  memorize_cache.py  open_file.py  open_url.py  read_file.py  set_settings.py  view_settings.py  write_file.py
afwf_fts_anything/icons/: __init__.py
afwf_fts_anything/tests/: __init__.py  helper.py
afwf_fts_anything/tests/data/movie/: movie-setting.json
debug/: .gitignore  debug_cf.py  run_script.py  whoosh_poc_search_without_group.py
docs/: 04-Debug-Guide.rst  05-Unit-Test-Guide.rst  Makefile  make.bat
docs/developer-guide/: 01-About-This-Best-Practice.rst  02-Initialize-a-New-Project.rst  03-Development-Guide.rst  06-Release-Guide.rst
docs/source/: conf.py  index.rst
docs/source/01-How-it-Works/: index.rst
docs/source/01-Quick-Start/: index.rst
docs/source/02-Data-Catalog/: index.rst
docs/source/02-How-to-Use/: index.rst
docs/source/03-Setting-and-Data-File/: index.rst
docs/source/04-Alfred-Workflow-Setup/: index.rst
docs/source/05-Build-Your-Own-Dataset/: index.rst
docs/source/99-Maintainer-Guide/: index.rst
docs/source/99-Maintainer-Guide/01-Project-Overview/: index.rst
docs/source/_static/: .custom-style.rst
docs/source/_static/css/: custom-style.css
docs/source/api/afwf_fts_anything/: __init__.rst  _version.rst  api.rst  cli.rst  data_catalog.rst  dataset.rst  exc.rst  fts.rst  helpers.rst  json_comment.rst  setting.rst
docs/user-guide/: 01-How-it-Works.rst  02-How-to-Use.rst
make/: python_env.mk
tests/: .gitignore  movie-setting.json  movie.json  test_api.py  test_cli.py  test_data_catalog.py  test_dataset.py  test_fts.py  test_fts_setting.py  test_handlers.py  test_helpers.py  test_import.py  test_setting.py
tests/handlers/: .gitignore  all.py  test_handler_fts.py
tests/movie/: movie-data.json  movie-setting.json
