[tool.poetry]
name = "afwf_fts_anything"
version = "1.1.1"
description = "Allows you to do full-text search on your own dataset, and use the result to open url, open file, run script, or basically do anything."
authors = ["Sanhe Hu <husanhe@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.7"
afwf = "0.3.1"
attrs = "21.4.0"
attrs_mate = "1.0.2"
pathlib_mate = " 1.2.1"
diskcache = "5.4.0"
sqlitedict = "2.1.0"
whoosh = "2.7.4"
superjson = "1.0.2"
requests = "2.27.1"
cached-property = { version = "1.5.2", markers = "python_version <= '3.7'" }


[tool.poetry.dev-dependencies]
# Don't put anything here, explicit is better than implicit


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
twine = "3.8.0"
wheel = "0.38.1"
rich = "12.5.1"
fire = "0.5.0"


[tool.poetry.group.doc]
optional = true


[tool.poetry.group.doc.dependencies]


[tool.poetry.group.test]
optional = true


[tool.poetry.group.test.dependencies]
pytest = "6.2.5"
pytest-cov = "2.12.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
